[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[metadata]
name = surviv_py
author = Olliroxx
version = 0.0.2
description = The netcode for surviv.io
long_description = A library for interacting with surviv.io APIs and joining/interacting with games.
keywords = surviv, surviv.io, game, survivio
license = GPL-3+
classifiers=
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
url = https://github.com/Olliroxx/surviv.py
project_urls=
    Bug Tracker=https://github.com/Olliroxx/surviv.py/issues/
    Documentations=https://survivpy.readthedocs.io/
    Source=https://github.com/Olliroxx/surviv.py/
license_files = LICENSE.txt

[options]
packages = find:
install_requires =
    ws4py >= 0.5.1
    requests >= 2.25
include_package_data = True
zip_safe = False
package_dir=
    =src

[options.package_data]
* = *.json

[options.packages.find]
where = src

[options.extras_require]
test =
    tox
dev =
    tox
    sphinx
    sphinx_rtd_theme
    flake8
    pytest

[options.entry_points]
console_scripts =
    surviv_deob = survivpy_deobfuscator.one_click:one_click_deob
